--- a/Register/Style/login.css
+++ b/Register/Style/login.css
@@ -88,6 +88,14 @@ body {
 .p-logIn {
   font-size: 2.4rem;
 }
-/* .btn-logIn {
-  background-color: aqua;
-} */
+@media (max-width: 31em) {
+  html {
+    font-size: 56.25%;
+  }
+  .form {
+    padding: 1rem;
+  }
+  .login-form {
+    margin-top: 2rem;
+  }
+}
