--- a/Application/style/style.css
+++ b/Application/style/style.css
@@ -225,3 +225,60 @@
   height: 4rem;
   border-radius: 11px;
 }
+
+@media (max-width: 62.5em) {
+  html {
+    font-size: 56.25%;
+  }
+  .show .status .status {
+    gap: 10rem;
+  }
+}
+
+@media (max-width: 47em) {
+  .logon-inputs {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .show .status {
+    gap: 2rem;
+  }
+  .table-field {
+    max-width: 70rem;
+    margin: 1rem auto;
+  }
+  .name {
+    font-size: 2rem;
+  }
+  .curent-balance {
+    font-size: 2.4rem;
+  }
+  .input-deposit {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 42em) {
+  html {
+    font-size: 50%;
+  }
+  .status {
+    flex-direction: column;
+  }
+  .table-field {
+    max-width: 58rem;
+  }
+  .table {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 29em) {
+  .table-field {
+    max-width: 40rem;
+  }
+  .table {
+    font-size: 1.2rem;
+  }
+}
+
