--- a/Application/style/style.css
+++ b/Application/style/style.css
@@ -280,5 +280,12 @@
   .table {
     font-size: 1.2rem;
   }
+  .form-login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
 }
 
