--- a/Application/style/style.css
+++ b/Application/style/style.css
@@ -57,7 +57,7 @@
 }
 .status {
   display: flex;
-  gap: 20rem;
+  gap: 10rem;
   justify-content: center;
   align-items: center;
   margin-bottom: 10rem;
@@ -225,12 +225,29 @@
   height: 4rem;
   border-radius: 11px;
 }
+.body-wrapper {
+  padding: 4.4rem;
+}
+
+@media (max-width: 82em) {
+  .deposit {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .export {
+    width: 24rem;
+    height: 6rem;
+    font-size: 1.6rem;
+  }
+}
 
 @media (max-width: 62.5em) {
   html {
     font-size: 56.25%;
   }
-  .show .status .status {
+  .status {
     gap: 10rem;
   }
 }
@@ -287,5 +304,16 @@
     align-items: center;
     gap: 1rem;
   }
+  .body-wrapper {
+    padding: 1rem;
+  }
+  .edit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .input-edit {
+    width: 80%;
+  }
 }
-
